# sit-aw-aip

./: .gitignore  README.md  pyproject.toml
convincesitaw_mllm/: generate_data.py  generate_json_files.py  inference_with_hosted_VLM.py  inference_with_local_model.py  send_identification_request_to_VLM.py
convincesitaw_mllm/inference/: Ucs_mapping.py  main.py
convincesitaw_mllm/inference_message/: message_abstract.py  message_uc1.py  message_uc2.py  message_uc3.py
convincesitaw_mllm/prompts/: prompts_UC1.py  prompts_UC2.py  prompts_UC3.py  sys_prompts_UC1.py  sys_prompts_UC2.py  user_prompts.py
convincesitaw_mllm/synchronized_input_multimodal_data/: SIMD_UC1.py  SIMD_UC2.py  SIMD_UC3.py  SIMD_abstract.py
docs/: requirements.txt
docs/source/: customized_UC.rst  deploy_model.rst  generic_principles.rst  identification.rst  index.rst  required_installations.rst
examples/ANO1/a58_00_2025_02_25_09_07_59/pick_2025_02_25_09_08_14/: metadata.yaml
examples/ANO1/a58_00_2025_02_25_09_07_59/scan_2025_02_25_09_08_00/: metadata.yaml  zivid_scan_1740474489347127794.ply
examples/ANO1/a58_00_2025_02_25_09_09_36/pick_2025_02_25_09_09_58/: metadata.yaml
examples/ANO1/a58_00_2025_02_25_09_09_36/scan_2025_02_25_09_09_37/: metadata.yaml  zivid_scan_1740474593773736594.ply
examples/ANO1/a58_10_2025_02_25_16_23_53/pick_2025_02_25_16_24_12/: metadata.yaml
examples/ANO1/a58_10_2025_02_25_16_23_53/scan_2025_02_25_16_23_54/: metadata.yaml  zivid_scan_1740500646630777056.ply
examples/ANO2/a58_00_2025_02_26_14_52_27/pick_2025_02_26_14_52_48/: metadata.yaml
examples/ANO2/a58_00_2025_02_26_14_52_27/scan_2025_02_26_14_52_28/: metadata.yaml  zivid_scan_1740581563580170187.ply
examples/ANO2/a58_00_2025_02_26_14_53_50/pick_2025_02_26_14_54_07/: metadata.yaml
examples/ANO2/a58_00_2025_02_26_14_53_50/scan_2025_02_26_14_53_51/: metadata.yaml  zivid_scan_1740581641834020711.ply
examples/ANO2/a58_01_2025_02_26_13_53_11/pick_2025_02_26_13_53_29/: metadata.yaml
examples/ANO2/a58_01_2025_02_26_13_53_11/scan_2025_02_26_13_53_12/: metadata.yaml  zivid_scan_1740578004755648117.ply
vLLM-hosting/: .env  Dockerfile  docker-compose.yaml
