# SIT-AW  Copyright (C) CEA 2025  Razane Azrou
[project]
name = "convincesitaw_mllm"
version = "0.1.0"
requires-python = "==3.10.*"
description = "MLLM pipeline for anomaly handling for enhacing robotic systems' autonomy in the context of situation awareness"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Razane Azrou", email = "razane.azrou@cea.fr"},
    {name = "Vaiyee Huynh", email = "vaiyee.huynh@cea.fr"},
    {name = "Nathan Damette", email = "nathan.damette@cea.fr"}
]
keywords = [
    "robotics",
    "ai",
    "awareness",
    "situation",
    "vision-language-models",
    "multimodal",
    "anomaly",
    "identification",
]

dependencies = [
  "numpy==1.26.4",
  "pandas==1.4.1",
  "abcplus",
  "aiohttp==3.12.11",
  "litellm>=1.72.4",
  "pybase64",
  "torch==2.6.0",
  "torchvision==0.21.0",
  "dataclasses",
  "ffmpeg-python==0.2.0",
  "tyro==0.9.19",
  "av==13.0.0",
  "python-dotenv",
  "critics",
  "matplotlib==3.5.1",
  "qwen-vl-utils",
  "transformers",
  "bitsandbytes",
  "accelerate==1.12.0",
  "decord",
  "opencv-python",
  "librosa==0.10.0",
  "scipy",
  "setuptools<70"
]

[tool.uv.sources]
critics = {git = "https://github.com/convince-project/sit-aw-critics.git", branch= "mwe"}

[project.scripts]
formatData = "convincesitaw_mllm.generate_data:cli"
inference_server = "convincesitaw_mllm.inference_with_hosted_VLM:cli"
inference_local = "convincesitaw_mllm.inference_with_local_model:cli"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["convincesitaw_mllm"]

[tool.uv.workspace]
members = []

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
